--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -36,7 +36,13 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
+  padding: 0;
   font-family: 'Inter', sans-serif;
+  display: unset;
+  justify-content: start;
+  align-items: start;
+  min-height: 0;
+  box-sizing: unset;
 }
 .header {
     display: flex;
