--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -15,7 +15,7 @@
 <body class="en">
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-          const mode = localStorage.getItem('darkmode');
+          const mode = localStorage.getItem('darkmode') || 'lightmode';
           if (mode === 'dark') {
             document.body.classList.add('darkmode');
             document.body.classList.remove('lightmode');
